// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMessage is rendered properly 1`] = `
<Fragment>
  <PageLoader />
</Fragment>
`;

exports[`SendMessage when schema is fetched adds fake data as default value 1`] = `
<JSONEditor
  defaultValue="{
	\\"f1\\": -93251214,
	\\"schema\\": \\"enim sit in fugiat dolor\\",
	\\"f2\\": \\"deserunt culpa sunt\\"
}"
  name="key"
  onChange={[Function]}
  readOnly={false}
>
  <ReactAce
    cursorStart={1}
    defaultValue="{
	\\"f1\\": -93251214,
	\\"schema\\": \\"enim sit in fugiat dolor\\",
	\\"f2\\": \\"deserunt culpa sunt\\"
}"
    editorProps={Object {}}
    enableBasicAutocompletion={false}
    enableLiveAutocompletion={false}
    enableSnippets={false}
    focus={false}
    fontSize={12}
    height="500px"
    highlightActiveLine={true}
    maxLines={null}
    minLines={null}
    mode="json5"
    name="key"
    navigateToFileEnd={true}
    onChange={[Function]}
    onLoad={null}
    onPaste={null}
    onScroll={null}
    placeholder={null}
    readOnly={false}
    scrollMargin={
      Array [
        0,
        0,
        0,
        0,
      ]
    }
    setOptions={Object {}}
    showGutter={true}
    showPrintMargin={true}
    style={Object {}}
    tabSize={2}
    theme="textmate"
    width="100%"
    wrapEnabled={true}
  >
    <div
      id="key"
      style={
        Object {
          "height": "500px",
          "width": "100%",
        }
      }
    />
  </ReactAce>
</JSONEditor>
`;

exports[`SendMessage when schema is fetched adds fake data as default value 2`] = `
<JSONEditor
  defaultValue="{
	\\"f1\\": -93251214,
	\\"schema\\": \\"enim sit in fugiat dolor\\",
	\\"f2\\": \\"deserunt culpa sunt\\"
}"
  name="content"
  onChange={[Function]}
  readOnly={false}
>
  <ReactAce
    cursorStart={1}
    defaultValue="{
	\\"f1\\": -93251214,
	\\"schema\\": \\"enim sit in fugiat dolor\\",
	\\"f2\\": \\"deserunt culpa sunt\\"
}"
    editorProps={Object {}}
    enableBasicAutocompletion={false}
    enableLiveAutocompletion={false}
    enableSnippets={false}
    focus={false}
    fontSize={12}
    height="500px"
    highlightActiveLine={true}
    maxLines={null}
    minLines={null}
    mode="json5"
    name="content"
    navigateToFileEnd={true}
    onChange={[Function]}
    onLoad={null}
    onPaste={null}
    onScroll={null}
    placeholder={null}
    readOnly={false}
    scrollMargin={
      Array [
        0,
        0,
        0,
        0,
      ]
    }
    setOptions={Object {}}
    showGutter={true}
    showPrintMargin={true}
    style={Object {}}
    tabSize={2}
    theme="textmate"
    width="100%"
    wrapEnabled={true}
  >
    <div
      id="content"
      style={
        Object {
          "height": "500px",
          "width": "100%",
        }
      }
    />
  </ReactAce>
</JSONEditor>
`;
